# NeuroKit

./: .buildinfo  .codeclimate.yaml  .codeclimate.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  NEWS.rst  Pipfile  README.rst  Test_notebook_to_be_removed.ipynb  authors.html  cite_us.html  codebook.html  codecov.yml  ecg_quality tester.ipynb  functions.html  functions_complexity.html  functions_ecg.html  genindex.html  index.html  installation.html  introduction.html  msptdfast_tester.ipynb  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  readthedocs.yml  rsp_segment_tester.ipynb  rvt_showcase.ipynb  search.html  searchindex.js  setup.cfg  (+5 more)
.binder/: environment.yml  requirements.txt
.doctrees/: authors.doctree  cite_us.doctree  codebook.doctree  environment.pickle  functions.doctree  functions_complexity.doctree  functions_ecg.doctree  index.doctree  installation.doctree  introduction.doctree
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml  release-drafter-config.yml  stale.yml
_modules/: index.html
_sources/: cite_us.rst.txt  codebook.rst  functions.rst.txt  functions_complexity.rst.txt  functions_ecg.rst.txt  index.rst.txt  installation.rst  installation.rst.txt
_static/: documentation_options.js  neurokit_codebook.csv
data/: README.rst  bio_resting_5min_100hz.csv  bio_resting_8min_100hz.csv  ecg_1000hz.csv  ecg_2000_pandas.csv  ecg_2000_poly.csv  ecg_3000_poly.csv  ecg_3000hz.csv  eeg_1min_200hz.py  eeg_resting_8min.py  eeg_restingstate.py  eog_100hz.csv  eog_200hz.csv  example_bio_100hz.csv  example_eeg.txt
docs/: codebook.rst  conf.py  environment.yml  functions.rst  index.rst  installation.rst  introduction.rst  make.bat  tutorials.rst  usage.rst
docs_readthedocs/: conf.py  (+2 more)
(+1415 files in other folders)
